<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Educatie</string>
    <string name="welcome_to">Welcome To</string>
    <string name="educatie_online_class_app">Educatie | Online Class App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Password</string>
    <string name="password_hint">• • • • • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_your_ready">We need a few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name_initial">Last Name(Initial)</string>
    <string name="s_b">S B</string>
    <string name="devanand">Devanand</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="programming_paper">Programming Paper</string>
    <string name="practical">Practical</string>
    <string name="p_karthik">P. Karthik</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="shctpt">http://shctpt.edu</string>
    <string name="programming_with_java">Programming With Java</string>
    <string name="android_development">Android Development</string>
    <string name="linux_administration">Linux Administration</string>
    <string name="amazon_web_services">Amazon Web Services</string>
    <string name="database_management_system">Database Management System</string>
    <string name="ethical_hacking_with_python">Ethical Hacking With Python</string>
    <string name="tamilii">பொது தமிழ் - II</string>
    <string name="tamiliv">பொது தமிழ் - IV</string>
    <string name="tamili">பொது தமிழ் - I</string>
    <string name="hod">Mrs. A. Josephine Sagaya Mala</string>
    <string name="theory_paper">Theory Paper</string>
    <string name="_3_hours">3 Hours</string>
    <string name="mr_m_sarlinraj">Mr. M. Sarlinraj</string>
    <string name="theory_programming_paper">Theory + Programming Paper</string>
    <string name="mr_d_adhiyaman">Mr. D. Adhiyaman</string>
    <string name="_2_hours">2 Hours</string>
    <string name="mr_s_mohanraj">Mr. S. Mohanraj</string>
    <string name="language_paper">Language Paper</string>
    <string name="dr_m_sarala_devi">Dr. M. Sarala Devi</string>
    <string name="demo_content">Lorem ipsum dolor sit amet, consectetur\n adipiscing elit. Vivamus sodales faucibus\n dapibus. Etiam mattis leo quis laoreet dictum.</string>
    <string name="demo_title">Lorem Ipsum</string>
    <string name="mr_l_anandaraj">Mr. L. Anandaraj</string>
    <string name="allied_paper">Allied Paper</string>
    <string name="site_educatie_me_moodle">educatie.me/moodle</string>
    <string name="moodle">Moodle - Educatie</string>
    <string name="learning_management_system">Learning Management System</string>
    <string name="mr_p_karthik">Mr. P. Karthik</string>
    <string name="software_engineering">Software Engineering</string>
    <string name="english_for_basic_communication">English for Basic Communication</string>
    <string name="allied_physics_for_computer_science_ii">Allied Physics for Computer Science - II</string>
    <string name="object_oriented_programming_with_c">Object Oriented Programming with C++</string>
    <string name="data_structures_and_algorithm_in_c">Data Structures and Algorithm in C</string>
    <string name="english_for_public_communication">English for public Communication</string>
    <string name="allied_mathematics_ii">Allied Mathematics - II</string>
    <string name="digital_computer_fundamentals">Digital Computer Fundamentals</string>
    <string name="web_design_concepts">Web Design Concepts</string>
    <string name="miss_d_saraswathi">Miss. D. Saraswathi</string>
    <string name="iii_computer_science">III Computer Science</string>
    <string name="free_certification_courses">Free Certification Courses</string>
    <string name="digital_marketing" tools:ignore="ExtraTranslation">Digital Marketing</string>
    <string name="mr_s_prabakaran">Mr. S. Prabakaran</string>
    <string name="next">Next</string>
    <string name="educatie_notes">Educatie Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="customisation">Customisation</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="pick_color">Pick Color</string>
    <string name="enter_url">Enter URL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">CANCEL</string>
    <string name="microprocessor_and_its_applications">Microprocessor and its Applications</string>
    <string name="icons_and_illustrations_by_iconscout">Icons and Illustrations by Iconscout</string>
    <string name="login">Login</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="i_year">I Year</string>
    <string name="ii_year">II Year</string>
    <string name="john_antony_m">John Antony M</string>
    <string name="type_your_message_here">Type Your Message Here</string>
    <string name="_5_hours">5 Hours</string>
    <string name="_4hours">4 Hours</string>
    <string name="_6_hours">6 Hours</string>
    <string name="_15_th_jan_2021">15<sup>th</sup> Jan 2021</string>
    <string name="_16_th_jan_2021">16<sup>th</sup> Jan 2021</string>
    <string name="_17_th_jan_2021">17<sup>th</sup> Jan 2021</string>
    <string name="_18_th_jan_2021">18<sup>th</sup> Jan 2021</string>
    <string name="_19_th_jan_2021">19<sup>th</sup> Jan 2021</string>
</resources>